propellor (5.9.0) UNRELEASED; urgency=medium

  * Avoid displaying an excessive amount of type error messages when many
    properties have been combined in a props list.
  * Added custom type error messages when Properties don't combine due to
    conflicting metatypes.
  * Added custom type error messages for ensureProperty and tightenTargets.
  * ensureProperty: The constraints have been simplified
    to EnsurePropertyAllowed. (API change)
  * ensureProperty: The contraints have been simplified
    to TightenTargetsAllowed. (API change)
  * CheckCombinable generates a Bool. (API change)
  * Libvirt.installed: install libvirt-daemon-system
    Thanks, David Bremner

 -- Joey Hess <id@joeyh.name>  Sat, 15 Jun 2019 12:32:37 -0400

propellor (5.8.0) unstable; urgency=medium

  * Fix bug in File.containsShellSetting that replaced whole shell conffile
    content with the setting if the file did not previously contain a line
    setting the key to some value.
  * Removed inChroot, instead use hasContainerCapability FilesystemContained.
    (API change)
  * Hostname: Properties that used to not do anything in a systemd or
    docker container will now change the container's hostname,
    since it's namespaced.
  * Add User.ownsWithPrimaryGroup
    Thanks, Sean Whitton
  * Ssh.userKeys, Ssh.userKeyAt: Create .ssh directory when it does not yet
    exist.
  * Ssh.userKeyAt: When a relative filepath is provided, it's put inside
    the user's .ssh directory.
  * Fix Git.pulled always reporting a change.
    Thanks, Sean Whitton

 -- Joey Hess <id@joeyh.name>  Fri, 26 Apr 2019 08:23:29 -0400

propellor (5.7.0) unstable; urgency=medium

  * Sbuild.built no longer includes Apt.stdSourcesList by default,
    in order to support non-Debian OS's. (API change)
    To upgrade: Simply add Sbuild.osDebianStandard to all Sbuild.built
    calls which have osDebian.
    Thanks, Sean Whitton
  * Propellor.Property.PropellorRepo renamed to Propellor.Property.Localdir